--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3376,7 +3376,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #baabe1;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
