--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1911,7 +1911,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			background-color: #ffffff;
-			color: #312450 !important;
+			color: #727174 !important;
 		}
 
 			input[type="submit"].primary:after,
@@ -2352,7 +2352,7 @@ input, select, textarea {
 
 		select option {
 			color: #ffffff;
-			background: #312450;
+			background: #727174#312450;
 		}
 
 		select:focus::-ms-value {
@@ -2521,7 +2521,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #727174;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -3028,7 +3028,7 @@ input, select, textarea {
 				-webkit-transition: opacity 1s ease;
 				-ms-transition: opacity 1s ease;
 				transition: opacity 1s ease;
-				background: rgba(49, 36, 80, 0.9);
+				background: #727174;
 				content: '';
 				display: block;
 				height: 100%;
